--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "tsx watch src/server.ts",
+    "start:dev": "tsx watch --env-file .env src/server.ts",
     "prestart": "pnpm run build",
-    "start": "node build/server.cjs",
+    "start": "node --env-file=.env build/server.cjs",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -16,7 +16,10 @@
     "test:e2e": "vitest run -c vitest.e2e.config.ts",
     "test:e2e:watch": "vitest -c vitest.e2e.config.ts",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -24,10 +27,28 @@
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
     "@tsconfig/node20": "^20.1.4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/node": "^22.3.0",
+    "@types/supertest": "^6.0.2",
+    "prisma": "^5.18.0",
     "tsup": "^8.2.4",
-    "tsx": "^4.16.5",
+    "tsx": "^4.17.0",
     "typescript": "^5.5.4",
-    "vite-tsconfig-paths": "^4.3.2",
+    "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5"
+  },
+  "dependencies": {
+    "@fastify/cookie": "^9.3.1",
+    "@fastify/cors": "^9.0.1",
+    "@fastify/jwt": "^8.0.1",
+    "@fastify/swagger": "^8.15.0",
+    "@prisma/client": "5.18.0",
+    "@scalar/fastify-api-reference": "^1.25.1",
+    "@scalar/themes": "^0.9.25",
+    "bcrypt": "^5.1.1",
+    "fastify": "^4.28.1",
+    "fastify-type-provider-zod": "^2.0.0",
+    "supertest": "^7.0.0",
+    "zod": "^3.23.8"
   }
 }
