--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,18 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "_version": "20.15.1",
   "extends": "@tsconfig/node20/tsconfig.json",
-
   "compilerOptions": {
     "lib": ["ES2023", "DOM"],
     "module": "Node16",
     "target": "ES2022",
-
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "Node16"
+    "moduleResolution": "NodeNext",
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
