--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "fastify": "^4.28.1",
     "fastify-type-provider-zod": "^2.0.0",
     "pg": "^8.12.0",
+    "pino": "^9.3.2",
+    "pino-pretty": "^11.2.2",
     "supertest": "^7.0.0",
     "zod": "^3.23.8"
   }
