--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/pg": "^8.11.6",
     "@types/supertest": "^6.0.2",
     "drizzle-kit": "^0.24.1",
+    "prisma": "^5.18.0",
     "tsup": "^8.2.4",
     "tsx": "^4.17.0",
     "typescript": "^5.5.4",
@@ -42,6 +43,7 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^8.0.1",
     "@fastify/swagger": "^8.15.0",
+    "@prisma/client": "5.18.0",
     "@scalar/fastify-api-reference": "^1.25.1",
     "@scalar/themes": "^0.9.25",
     "bcrypt": "^5.1.1",
