feat: create prisma repositories

--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "test:e2e": "vitest run -c vitest.e2e.config.ts",
     "test:e2e:watch": "vitest -c vitest.e2e.config.ts",
     "test:coverage": "vitest run --coverage",
-    "db:generate": "drizzle-kit generate",
-    "db:studio": "drizzle-kit studio",
-    "db:seed": "tsx --env-file .env src/infra/database/drizzle/seed.ts"
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
@@ -28,9 +27,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.3.0",
-    "@types/pg": "^8.11.6",
     "@types/supertest": "^6.0.2",
-    "drizzle-kit": "^0.24.1",
     "prisma": "^5.18.0",
     "tsup": "^8.2.4",
     "tsx": "^4.17.0",
@@ -47,12 +44,8 @@
     "@scalar/fastify-api-reference": "^1.25.1",
     "@scalar/themes": "^0.9.25",
     "bcrypt": "^5.1.1",
-    "drizzle-orm": "^0.33.0",
     "fastify": "^4.28.1",
     "fastify-type-provider-zod": "^2.0.0",
-    "pg": "^8.12.0",
-    "pino": "^9.3.2",
-    "pino-pretty": "^11.2.2",
     "supertest": "^7.0.0",
     "zod": "^3.23.8"
   }
