--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "bcrypt": "^5.1.1",
     "fastify": "^4.28.1",
     "fastify-type-provider-zod": "^2.0.0",
+    "pino-pretty": "^11.2.2",
     "supertest": "^7.0.0",
     "zod": "^3.23.8"
   }
