--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:e2e:watch": "vitest -c vitest.e2e.config.ts",
     "test:coverage": "vitest run --coverage",
     "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:seed": "tsx --env-file .env prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -43,7 +44,9 @@
     "@prisma/client": "5.18.0",
     "@scalar/fastify-api-reference": "^1.25.1",
     "@scalar/themes": "^0.9.25",
+    "axios": "^1.7.6",
     "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0",
     "fastify": "^4.28.1",
     "fastify-type-provider-zod": "^2.0.0",
     "pino-pretty": "^11.2.2",
