--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.3.0",
     "@types/supertest": "^6.0.2",
+    "@vitest/coverage-v8": "^2.0.5",
     "prisma": "^5.18.0",
     "tsup": "^8.2.4",
     "tsx": "^4.17.0",
@@ -37,9 +38,11 @@
     "vitest": "^2.0.5"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.637.0",
     "@fastify/cookie": "^9.3.1",
     "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^8.0.1",
+    "@fastify/multipart": "^8.3.0",
     "@fastify/swagger": "^8.15.0",
     "@prisma/client": "5.18.0",
     "@scalar/fastify-api-reference": "^1.25.1",
