feat: create upload routes

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,11 @@ PORT=<port>
 
 # Database
 DATABASE_URL=<url>
+
+# Firebase
+FIREBASE_API_KEY=<key>
+FIREBASE_APP_ID=<id>
+FIREBASE_AUTH_DOMAIN=<domain>
+FIREBASE_MESSAGING_SENDER_ID=<id>
+FIREBASE_PROJECT_ID=<id>
+FIREBASE_STORAGE_BUCKET=<bucket>
