--- a/package.json
+++ b/package.json
@@ -50,9 +50,10 @@
     "cheerio": "^1.0.0",
     "fastify": "^4.28.1",
     "fastify-type-provider-zod": "^2.0.0",
-    "tsup": "^8.2.4",
+    "firebase": "^10.13.1",
     "pino-pretty": "^11.2.2",
     "supertest": "^7.0.0",
+    "tsup": "^8.2.4",
     "zod": "^3.23.8"
   }
 }
