--- a/package.json
+++ b/package.json
@@ -1,59 +1,60 @@
 {
-  "name": "deck-backend",
-  "version": "1.0.0",
-  "type": "module",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start:dev": "tsx watch --env-file .env src/server.ts",
-    "prestart": "pnpm run build",
-    "start": "node build/server.js",
-    "build": "tsup src --out-dir build --format esm",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:unit": "vitest run -c vitest.unit.config.ts",
-    "test:unit:watch": "vitest -c vitest.unit.config.ts",
-    "test:e2e": "vitest run -c vitest.e2e.config.ts",
-    "test:e2e:watch": "vitest -c vitest.e2e.config.ts",
-    "test:coverage": "vitest run --coverage ",
-    "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio",
-    "db:seed": "tsx --env-file .env prisma/seed.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@biomejs/biome": "^1.8.3",
-    "@tsconfig/node20": "^20.1.4",
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^22.5.4",
-    "@types/supertest": "^6.0.2",
-    "@vitest/coverage-v8": "^2.0.5",
-    "prisma": "^5.19.1",
-    "tsx": "^4.19.0",
-    "typescript": "^5.5.4",
-    "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.0.5"
-  },
-  "dependencies": {
-    "@fastify/cookie": "^9.4.0",
-    "@fastify/cors": "^9.0.1",
-    "@fastify/jwt": "^8.0.1",
-    "@fastify/multipart": "^8.3.0",
-    "@fastify/swagger": "^8.15.0",
-    "@prisma/client": "5.18.0",
-    "@scalar/fastify-api-reference": "^1.25.9",
-    "@scalar/themes": "^0.9.28",
-    "axios": "^1.7.7",
-    "bcrypt": "^5.1.1",
-    "cheerio": "^1.0.0",
-    "fastify": "^4.28.1",
-    "fastify-type-provider-zod": "^2.0.0",
-    "firebase": "^10.13.1",
-    "pino-pretty": "^11.2.2",
-    "supertest": "^7.0.0",
-    "tsup": "^8.2.4",
-    "zod": "^3.23.8"
-  }
+	"name": "deck-backend",
+	"version": "1.0.0",
+	"type": "module",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start:dev": "tsx watch --env-file .env src/server.ts",
+		"prestart": "pnpm run build",
+		"start": "node build/server.js",
+		"build": "tsup src --out-dir build --format esm",
+		"fix": "biome format --write src",
+		"lint": "biome lint --write src",
+		"check": "biome check --write src",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:e2e": "vitest run -c vitest.config.e2e.ts",
+		"test:e2e:watch": "vitest -c vitest.config.e2e.ts",
+		"test:coverage": "vitest run --coverage ",
+		"db:migrate": "prisma migrate dev",
+		"db:studio": "prisma studio",
+		"db:seed": "tsx --env-file .env prisma/seed.ts"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.3",
+		"@tsconfig/node20": "^20.1.4",
+		"@types/bcrypt": "^5.0.2",
+		"@types/node": "^22.7.4",
+		"@types/supertest": "^6.0.2",
+		"@vitest/coverage-v8": "^2.1.2",
+		"axios": "^1.7.7",
+		"cheerio": "^1.0.0",
+		"prisma": "^5.20.0",
+		"supertest": "^7.0.0",
+		"tsx": "^4.19.1",
+		"typescript": "^5.6.2",
+		"vite-tsconfig-paths": "^5.0.1",
+		"vitest": "^2.1.2"
+	},
+	"dependencies": {
+		"@fastify/cookie": "^9.4.0",
+		"@fastify/cors": "^9.0.1",
+		"@fastify/jwt": "^8.0.1",
+		"@fastify/multipart": "^8.3.0",
+		"@fastify/swagger": "^8.15.0",
+		"@prisma/client": "5.18.0",
+		"@scalar/fastify-api-reference": "^1.25.28",
+		"@scalar/themes": "^0.9.33",
+		"bcrypt": "^5.1.1",
+		"fastify": "^4.28.1",
+		"fastify-type-provider-zod": "^2.1.0",
+		"firebase": "^10.14.0",
+		"pino-pretty": "^11.2.2",
+		"tsup": "^8.3.0",
+		"zod": "^3.23.8"
+	}
 }
