build: adjust container and seed script

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ JWT_SECRET=<secret>
 PORT=<port>
 
 # Database
+POSTGRES_USER=<user>
+POSTGRES_PASSWORD=<password>
+POSTGRES_DATABASE=<database>
+POSTGRES_HOST=<host>
+POSTGRES_URL=<database_url>
 DATABASE_URL=<url>
 
 # Firebase
