--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start:dev": "tsx watch --env-file .env src/server.ts",
+		"start:dev": "tsx watch --env-file .development.env src/server.ts",
 		"prestart": "pnpm run build",
-		"start": "node build/server.js",
+		"start": "node --env-file=.development.env build/server.js",
 		"build": "tsup src --out-dir build --format esm",
 		"fix": "biome format --write src",
 		"lint": "biome lint --write src",
@@ -16,8 +16,10 @@
 		"test:watch": "vitest",
 		"test:e2e": "vitest run -c vitest.config.e2e.ts",
 		"test:e2e:watch": "vitest -c vitest.config.e2e.ts",
-		"test:coverage": "vitest run --coverage ",
+		"test:coverage": "vitest run --coverage",
+		"db:generate": "prisma generate",
 		"db:migrate": "prisma migrate dev",
+		"db:deploy": "prisma migrate deploy",
 		"db:studio": "prisma studio",
 		"db:seed": "tsx --env-file .env prisma/seed.ts"
 	},
@@ -25,36 +27,47 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.3",
+		"@biomejs/biome": "^1.9.4",
 		"@tsconfig/node20": "^20.1.4",
-		"@types/bcrypt": "^5.0.2",
-		"@types/node": "^22.7.5",
+		"@types/node": "^22.13.8",
 		"@types/supertest": "^6.0.2",
-		"@vitest/coverage-v8": "^2.1.2",
-		"axios": "^1.7.7",
+		"@vitest/coverage-v8": "^2.1.9",
+		"axios": "^1.8.3",
 		"cheerio": "^1.0.0",
-		"prisma": "^5.20.0",
+		"prisma": "^5.22.0",
 		"supertest": "^7.0.0",
-		"tsx": "^4.19.1",
-		"typescript": "^5.6.3",
-		"vite-tsconfig-paths": "^5.0.1",
-		"vitest": "^2.1.2"
+		"tsx": "^4.19.3",
+		"typescript": "^5.8.2",
+		"vite-tsconfig-paths": "^5.1.4",
+		"vitest": "^2.1.9"
 	},
 	"dependencies": {
 		"@fastify/cookie": "^9.4.0",
 		"@fastify/cors": "^9.0.1",
 		"@fastify/jwt": "^8.0.1",
-		"@fastify/multipart": "^8.3.0",
+		"@fastify/multipart": "^8.3.1",
 		"@fastify/swagger": "^8.15.0",
 		"@prisma/client": "5.18.0",
-		"@scalar/fastify-api-reference": "^1.25.31",
-		"@scalar/themes": "^0.9.34",
+		"@scalar/fastify-api-reference": "^1.25.124",
+		"@scalar/themes": "^0.9.70",
 		"bcrypt": "^5.1.1",
-		"fastify": "^4.28.1",
+		"cjs-loader": "^0.1.0",
+		"fastify": "^4.29.0",
 		"fastify-type-provider-zod": "^2.1.0",
-		"firebase": "^10.14.0",
-		"pino-pretty": "^11.2.2",
-		"tsup": "^8.3.0",
-		"zod": "^3.23.8"
+		"firebase": "^10.14.1",
+		"pino-pretty": "^11.3.0",
+		"tsup": "^8.4.0",
+		"zod": "^3.24.2"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"@biomejs/biome",
+			"@prisma/client",
+			"@prisma/engines",
+			"bcrypt",
+			"esbuild",
+			"prisma",
+			"protobufjs"
+		]
 	}
 }
