--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,20 @@ services:
       timeout: 5s
       retries: 5
 
+  app:
+    build: .
+    container_name: deck-api
+    restart: unless-stopped
+    ports:
+      - "3333:3333"
+    environment:
+      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/deck_dev?schema=public
+      NODE_ENV: production
+      PORT: 3333
+      JWT_SECRET: ${JWT_SECRET:-your-secret-key-change-me}
+    depends_on:
+      postgres:
+        condition: service_healthy
+
 volumes:
   postgres_data:
