feat: ajustado setup de testes (vitest mantido)
TESTES DE UNIDADE:
- ✅ Todos os 79 testes de unidade passando
- ✅ Mantido Vitest como test runner
- ✅ Configurado resolve.alias ao invés de vite-tsconfig-paths
- ✅ Adicionado 'type: module' de volta ao package.json

TESTES E2E:
- ✅ Criado setup-app.ts para inicializar NestJS nos testes
- ✅ Script automático para atualizar todos os 19 testes E2E
- ✅ Atualizados todos os testes para usar createTestApp/closeTestApp
- ✅ Substituído app.server por app.getHttpServer()
- ⚠️  5 arquivos passando, 14 com erros (endpoints legados)

CONFIGURAÇÃO:
- ✅ Criado .swcrc para configurar CommonJS no build NestJS
- ✅ Instalado glob para script de automação
- ✅ Vitest configurado com aliases manuais

Status: Testes de unidade 100% funcionais

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
 	"name": "deck-backend",
 	"version": "1.0.0",
+	"type": "module",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
 		"start:dev": "nest start --watch",
 		"start:dev:old": "tsx watch --env-file .development.env src/server.ts",
 		"prestart": "pnpm run build",
-		"start": "node dist/main",
+		"start": "node dist/main.js",
 		"build": "nest build",
 		"build:old": "tsup src --out-dir build --format esm",
 		"fix": "biome format --write src",
@@ -40,6 +41,7 @@
 		"@vitest/coverage-v8": "^2.1.9",
 		"axios": "^1.13.0",
 		"cheerio": "^1.1.2",
+		"glob": "^11.0.3",
 		"prisma": "^5.22.0",
 		"supertest": "^7.1.4",
 		"tsx": "^4.20.6",
