chore: removidos arquivos desnecessários
ARQUIVOS REMOVIDOS:

1. Configuração Fastify (não mais usada):
   - src/@infra/config/types/fastify-jwt.ts
   - src/@infra/config/env/env-to-logger.ts

2. Documentação desatualizada (4 arquivos):
   - NESTJS_REFACTOR_TODO.md
   - ORGANIZATION_SUMMARY.md
   - E2E_ISSUES_SUMMARY.md
   - QUICK_COMMANDS.md

3. Testes E2E legados do Fastify (19 arquivos):
   - test/e2e/legacy/ (todos os testes Fastify)
   - Incompatíveis com a nova estrutura NestJS
   - Precisariam ser reescritos completamente

4. Use cases não utilizados - Draft (6 arquivos + mapper):
   - create-draft, edit-draft, get-draft (specs + impl)
   - prisma-draft-mapper.ts
   - presenters/draft.ts
   - Sem factories, sem uso nos controllers

ORGANIZAÇÃO:
- Scripts de migração movidos para scripts/migration-history/
  - remove-ts-extensions.ts
  - update-e2e-tests.ts
  - update-imports-ddd.ts

RESULTADO:
- ✅ 66 testes de unidade passando (antes: 79, removidos 13 de draft)
- ✅ Código mais limpo e focado
- ✅ Apenas código funcional e necessário
- ✅ Documentação atualizada mantida (MIGRATION_SESSION_SUMMARY.md, FOLDER_STRUCTURE.md)

--- a/.swcrc
+++ b/.swcrc
@@ -14,12 +14,24 @@
     "keepClassNames": true,
     "baseUrl": "./",
     "paths": {
-      "@/@core/*": ["./src/@core/*"],
-      "@/@infra/*": ["./src/@infra/*"],
-      "@/@shared/*": ["./src/@shared/*"],
-      "@/@presentation/*": ["./src/@presentation/*"],
-      "@/*": ["./src/*"],
-      "test/*": ["./test/*"]
+      "@/@core/*": [
+        "./src/@core/*"
+      ],
+      "@/@infra/*": [
+        "./src/@infra/*"
+      ],
+      "@/@shared/*": [
+        "./src/@shared/*"
+      ],
+      "@/@presentation/*": [
+        "./src/@presentation/*"
+      ],
+      "@/*": [
+        "./src/*"
+      ],
+      "test/*": [
+        "./test/*"
+      ]
     }
   },
   "module": {
