--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,6 @@
 			"test/*": ["./test/*"]
 		}
 	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
+	"include": ["src/**/*", "test/**/*"],
+	"exclude": ["node_modules", "dist"]
 }
