fix: adicionados tipos do Vitest para TypeScript
PROBLEMA:
- TypeScript não reconhecia globals do Vitest
- Erros: Cannot find name 'describe', 'it', 'expect', etc.
- IDE mostrando TS2582 em todos os arquivos de teste

SOLUÇÃO:
- Adicionado 'vitest/globals' aos types do tsconfig.json
- TypeScript agora reconhece describe, it, expect, beforeEach, etc.

RESULTADO:
✅ IDE sem erros de TypeScript
✅ Intellisense funciona nos testes
✅ 69 testes passando
✅ Autocomplete correto

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
 		"removeComments": true,
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
+		"types": ["vitest/globals"],
 		"allowSyntheticDefaultImports": true,
 		"sourceMap": true,
 		"outDir": "./dist",
