--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"reflect-metadata": "^0.2.2",
-		"rxjs": "^7.8.2"
+		"rxjs": "^7.8.2",
+		"zod": "^4.1.12"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
