--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
 		"removeComments": true,
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
-		"types": ["vitest/globals"],
+		"types": ["vitest/globals", "multer"],
 		"allowSyntheticDefaultImports": true,
 		"sourceMap": true,
 		"outDir": "./dist",
