fix(infra): corrige erros de tipagem na camada de infraestrutura

--- a/biome.json
+++ b/biome.json
@@ -27,7 +27,8 @@
 				"noExcessiveNestedTestSuites": "error",
 				"noUselessTernary": "error",
 				"noVoid": "error",
-				"useSimplifiedLogicExpression": "error"
+				"useSimplifiedLogicExpression": "error",
+				"noStaticOnlyClass": "off"
 			},
 			"correctness": {
 				"noNewSymbol": "error",
