--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@swc/cli": "^0.7.8",
 		"@swc/core": "^1.14.0",
 		"@tsconfig/node20": "^20.1.6",
+		"@types/bcrypt": "^6.0.0",
 		"@types/node": "^22.18.12",
 		"@types/passport-jwt": "^4.0.1",
 		"@types/supertest": "^6.0.3",
