--- a/.env.example
+++ b/.env.example
@@ -4,19 +4,22 @@
 # Environment
 NODE_ENV=development
 
-# JWT Secret Key
-JWT_SECRET=your-secret-key-here
-
 # Server Port
 PORT=3333
 
-# Database URL
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/deck_dev
+# JWT Configuration
+JWT_SECRET=your-secret-key-here-change-in-production
+JWT_EXPIRES_IN=7d
 
-# Firebase Configuration (get from Firebase Console)
+# Database Configuration
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/deck_dev?schema=public
+
+# Firebase Configuration (Required for file uploads)
 FIREBASE_API_KEY=
 FIREBASE_APP_ID=
 FIREBASE_AUTH_DOMAIN=
 FIREBASE_MESSAGING_SENDER_ID=
 FIREBASE_PROJECT_ID=
 FIREBASE_STORAGE_BUCKET=
+
+
