--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,6 @@ services:
       POSTGRES_DB: deck_dev
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   app:
     build: .
@@ -27,16 +22,18 @@ services:
       DATABASE_URL: postgresql://postgres:postgres@postgres:5432/deck_dev?schema=public
       NODE_ENV: production
       PORT: 3333
-      JWT_SECRET: ${JWT_SECRET:-your-secret-key-change-me}
-      FIREBASE_API_KEY: ${FIREBASE_API_KEY:-}
-      FIREBASE_APP_ID: ${FIREBASE_APP_ID:-}
-      FIREBASE_AUTH_DOMAIN: ${FIREBASE_AUTH_DOMAIN:-}
-      FIREBASE_MESSAGING_SENDER_ID: ${FIREBASE_MESSAGING_SENDER_ID:-}
-      FIREBASE_PROJECT_ID: ${FIREBASE_PROJECT_ID:-}
-      FIREBASE_STORAGE_BUCKET: ${FIREBASE_STORAGE_BUCKET:-}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRES_IN: ${JWT_EXPIRES_IN:-7d}
+      FIREBASE_API_KEY: ${FIREBASE_API_KEY}
+      FIREBASE_APP_ID: ${FIREBASE_APP_ID}
+      FIREBASE_AUTH_DOMAIN: ${FIREBASE_AUTH_DOMAIN}
+      FIREBASE_MESSAGING_SENDER_ID: ${FIREBASE_MESSAGING_SENDER_ID}
+      FIREBASE_PROJECT_ID: ${FIREBASE_PROJECT_ID}
+      FIREBASE_STORAGE_BUCKET: ${FIREBASE_STORAGE_BUCKET}
     depends_on:
-      postgres:
-        condition: service_healthy
+      - postgres
 
 volumes:
   postgres_data:
+
+
