--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
 		"@nestjs/swagger": "^11.2.1",
 		"@prisma/client": "5.18.0",
 		"@types/multer": "^2.0.0",
+		"axios": "^1.13.1",
 		"bcrypt": "^5.1.1",
+		"cheerio": "^1.1.2",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
 		"firebase": "^10.14.1",
