refactor: fix test scripts and add documentation
Fixed test:unit running all tests instead of only unit tests. Added test:integration script. Created SCRIPTS_TESTES.md guide. Updated vitest.config.mjs with explicit excludes.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "nest start --watch",
 		"dev:debug": "nest start --debug --watch",
 		"build": "nest build",
-		"prebuild": "pnpm typecheck && pnpm lint:check && pnpm test",
+		"prebuild": "pnpm typecheck && pnpm lint:check && pnpm test:unit",
 		"start": "node dist/@presentation/main.js",
 		"typecheck": "tsc --noEmit",
 		"format": "biome format --write .",
@@ -14,14 +14,18 @@
 		"lint": "biome lint --write .",
 		"lint:check": "biome check .",
 		"check": "biome check --write .",
-		"test": "vitest run",
-		"test:watch": "vitest",
-		"test:unit": "vitest run --coverage",
+		"test": "vitest run --exclude='**/*.integration.spec.ts' --exclude='**/*.e2e-spec.ts'",
+		"test:watch": "vitest --exclude='**/*.integration.spec.ts' --exclude='**/*.e2e-spec.ts'",
+		"test:unit": "vitest run --exclude='**/*.integration.spec.ts' --exclude='**/*.e2e-spec.ts'",
+		"test:unit:coverage": "pnpm test:unit --coverage",
+		"test:unit:watch": "pnpm test:watch",
+		"test:integration": "vitest run -c vitest.config.integration.mjs",
+		"test:integration:watch": "vitest -c vitest.config.integration.mjs",
 		"test:e2e": "vitest run -c vitest.config.e2e.mjs",
 		"test:e2e:watch": "vitest -c vitest.config.e2e.mjs",
 		"test:e2e:ui": "vitest --ui -c vitest.config.e2e.mjs",
-		"test:all": "pnpm test:unit && pnpm test:e2e",
-		"test:ci": "pnpm typecheck && pnpm lint:check && vitest run --coverage --reporter=verbose && pnpm test:e2e",
+		"test:all": "pnpm test:unit && pnpm test:integration && pnpm test:e2e",
+		"test:ci": "pnpm typecheck && pnpm lint:check && pnpm test:unit:coverage --reporter=verbose && pnpm test:integration && pnpm test:e2e",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "tsx src/@infra/database/drizzle/migrate.ts",
 		"db:push": "drizzle-kit push",
