--- a/.swcrc
+++ b/.swcrc
@@ -1,46 +1,34 @@
 {
-  "$schema": "https://json.schemastore.org/swcrc",
-  "jsc": {
-    "parser": {
-      "syntax": "typescript",
-      "decorators": true,
-      "dynamicImport": true
-    },
-    "transform": {
-      "legacyDecorator": true,
-      "decoratorMetadata": true
-    },
-    "target": "es2021",
-    "keepClassNames": true,
-    "baseUrl": "./",
-    "paths": {
-      "@/@core/*": [
-        "./src/@core/*"
-      ],
-      "@/@infra/*": [
-        "./src/@infra/*"
-      ],
-      "@/@shared/*": [
-        "./src/@shared/*"
-      ],
-      "@/@presentation/*": [
-        "./src/@presentation/*"
-      ],
-      "@/*": [
-        "./src/*"
-      ],
-      "test/*": [
-        "./test/*"
-      ]
-    }
-  },
-  "module": {
-    "type": "commonjs",
-    "strict": false,
-    "strictMode": true,
-    "lazy": false,
-    "noInterop": false
-  },
-  "minify": false,
-  "sourceMaps": true
+	"$schema": "https://json.schemastore.org/swcrc",
+	"jsc": {
+		"parser": {
+			"syntax": "typescript",
+			"decorators": true,
+			"dynamicImport": true
+		},
+		"transform": {
+			"legacyDecorator": true,
+			"decoratorMetadata": true
+		},
+		"target": "es2021",
+		"keepClassNames": true,
+		"baseUrl": "./",
+		"paths": {
+			"@/@core/*": ["./src/@core/*"],
+			"@/@infra/*": ["./src/@infra/*"],
+			"@/@shared/*": ["./src/@shared/*"],
+			"@/@presentation/*": ["./src/@presentation/*"],
+			"@/*": ["./src/*"],
+			"test/*": ["./test/*"]
+		}
+	},
+	"module": {
+		"type": "commonjs",
+		"strict": false,
+		"strictMode": true,
+		"lazy": false,
+		"noInterop": false
+	},
+	"minify": false,
+	"sourceMaps": true
 }
