feat: Add integration and E2E testing setup with database utilities and seed clearing.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"moduleResolution": "node",
+		"resolveJsonModule": true,
 		"declaration": true,
 		"removeComments": true,
 		"emitDecoratorMetadata": true,
