--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"db:push": "drizzle-kit push",
 		"db:studio": "drizzle-kit studio",
 		"db:seed": "tsx --env-file .env src/@infra/database/drizzle/seed.ts",
-		"db:setup": "pnpm db:migrate && pnpm db:seed",
+		"db:setup": "pnpm db:migrate && pnpm db:seed --clear",
 		"db:reset": "pnpm docker:clean && pnpm docker:dev && pnpm db:setup",
 		"docker:dev": "docker compose up -d postgres",
 		"docker:up": "docker compose up -d",
