feat: add a detailed setup summary markdown file and update Render deployment branch to production.

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     runtime: node
     region: oregon
     plan: free
-    branch: main
+    branch: production
     buildCommand: pnpm install && pnpm build
     startCommand: pnpm start
     envVars:
