fix: configure Render health check and add deployment docs
- Add explicit PORT=10000 env var in render.yaml
- Add @HttpCode(HttpStatus.OK) to health check endpoints
- Create DEPLOY.md with comprehensive deployment guide
- Fix health check configuration following Render best practices

--- a/render.yaml
+++ b/render.yaml
@@ -10,6 +10,8 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: 10000
       - key: DATABASE_URL
         sync: false
       - key: JWT_SECRET
