build: adjust to deploy

--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     branch: production
     buildCommand: pnpm install && pnpm build:prod  # Remova os testes do build!
     startCommand: pnpm start
-    healthCheckPath: /health-check  # Apenas o path, sem domínio ou porta
+    # healthCheckPath: /health-check  # Apenas o path, sem domínio ou porta
     envVars:
       - key: NODE_ENV
         value: production
