feat(storage): migrate from Firebase to Supabase and organize folders
- Replace Firebase Storage with Supabase Storage integration
- Organize uploads into 'profiles' and 'banners' folders
- Use resource IDs for predictable naming and easy replacement
- Sanitize error status codes to prevent server crashes
- Install mime-types for correct Content-Type detection

--- a/.env.example
+++ b/.env.example
@@ -14,12 +14,9 @@ JWT_EXPIRES_IN=7d
 # Database Configuration
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/deck_dev?schema=public
 
-# Firebase Configuration (Required for file uploads)
-FIREBASE_API_KEY=
-FIREBASE_APP_ID=
-FIREBASE_AUTH_DOMAIN=
-FIREBASE_MESSAGING_SENDER_ID=
-FIREBASE_PROJECT_ID=
-FIREBASE_STORAGE_BUCKET=
+# Supabase Configuration (Required for file uploads)
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+SUPABASE_BUCKET=uploads
 
 
