ci: add write permissions to auto-release workflow

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -6,6 +6,9 @@ on:
       - main
   workflow_dispatch: # Allows manual triggering
 
+permissions:
+  contents: write
+
 jobs:
   auto-merge:
     name: 🔄 Auto Merge main to production
