--- a/package.json
+++ b/package.json
@@ -100,8 +100,14 @@
 			"protobufjs"
 		],
 		"overrides": {
-			"undici@<6.21.2": ">=6.21.2",
-			"esbuild@<0.25.0": ">=0.25.12"
+			"@isaacs/brace-expansion@<=5.0.0": ">=5.0.1",
+			"ajv@<8.18.0": ">=8.18.0",
+			"esbuild@<0.25.0": ">=0.25.12",
+			"lodash@<=4.17.22": ">=4.17.23",
+			"qs@<=6.14.1": ">=6.14.2",
+			"undici@<6.23.0": ">=6.23.0",
+			"undici@>=7.0.0 <7.18.2": ">=7.18.2",
+			"webpack@>=5.49.0 <=5.104.0": ">=5.104.1"
 		}
 	}
 }
