--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
 		"@nestjs/swagger": "^11.2.3",
 		"@supabase/supabase-js": "^2.89.0",
 		"@types/multer": "^2.0.0",
-		"axios": "^1.13.2",
+		"axios": "^1.13.5",
 		"bcrypt": "^6.0.0",
 		"cheerio": "^1.1.2",
 		"class-transformer": "^0.5.1",
@@ -104,6 +104,7 @@
 			"ajv@<8.18.0": ">=8.18.0",
 			"esbuild@<0.25.0": ">=0.25.12",
 			"lodash@<=4.17.22": ">=4.17.23",
+			"minimatch@<10.2.1": ">=10.2.1",
 			"qs@<=6.14.1": ">=6.14.2",
 			"undici@<6.23.0": ">=6.23.0",
 			"undici@>=7.0.0 <7.18.2": ">=7.18.2",
